CI testing build image served on port 80